--- a/themes/simplebootx/Portal/content_paper.html
+++ b/themes/simplebootx/Portal/content_paper.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{$post_title} | {$site_name} </title>
-    <meta name="keywords" content="{$post_keywords}" />
+    <title>
+        <php> echo $article['title'];</php>
+        | {$site_name}
+    </title>
+    <meta name="keywords" content="{$post_keywords}"/>
     <meta name="description" content="{$post_excerpt}">
-    <tc_include file="Public:head" />
+    <tc_include file="Public:head"/>
     <style>
         #article_content img {
             height: auto !important
@@ -20,34 +23,42 @@
     </style>
 </head>
 <body class="">
-<tc_include file="Public:nav" />
+<tc_include file="Public:nav"/>
 <div class="container tc-main">
     <div class="row">
         <div class="span9">
 
             <div class="tc-box first-box article-box">
-                <h2>{$post_title}</h2>
+                <h2>
+                    <php> echo $article['title'];</php>
+                    <span class="label" style="min-width: 2em;margin: 1em;background-color: #00a2d4"><php>echo
+                        $article['content_type']
+                    </php></span></h2>
                 <div class="article-infobox">
-                    <span>{$post_date} by {$user_name|default=$user_login}</span>
+                    <span><php> echo $article['post_date'];</php> <a
+                            href="../../../user/index/index/id/{$article['post_author']}">
+                        <php> echo $article['user_name'];</php>
+                    </a></span>
 		    		<span>
-		    			<a href="javascript:;"><i class="fa fa-eye"></i><span>{$post_hits}</span></a>
-						<a href="{:U('article/do_like',array('id'=>$object_id))}" class="js-count-btn"><i class="fa fa-thumbs-up"></i><span class="count">{$post_like}</span></a>
-						<a href="{:U('user/favorite/do_favorite',array('id'=>$object_id))}" class="js-favorite-btn" data-title="{$post_title}" data-url="{:leuu('article/index',array('id'=>$tid,'cid'=>$term_id))}" data-key="{:sp_get_favorite_key('posts',$object_id)}">
+                        <a href="{:U('user/favorite/do_favorite',array('id'=>$object_id))}" class="js-favorite-btn"
+                           data-title="{$post_title}"
+                           data-url="{:leuu('article/index',array('id'=>$tid,'cid'=>$term_id))}"
+                           data-key="{:sp_get_favorite_key('posts',$object_id)}">
                             <i class="fa fa-star-o"></i>
                         </a>
+		    			<a href="javascript:;"><i class="fa fa-eye"></i><span><php> echo $article['post_hits'];
+                        </php></span></a>
+						<a href="{:U('article/do_like',array('id'=>$object_id))}" class="js-count-btn"><i
+                                class="fa fa-thumbs-up"></i><span class="count"><php> echo $article['post_like'];</php></span></a>
+
 					</span>
                 </div>
                 <hr>
                 <div id="article_content">
-                    <?php dump($article); ?>;
+                    <?php dump($article); ?>
+                    <h4>期刊/出版社：{$article['press']}</h4>
                 </div>
                 <div>
-                    <if condition="!empty($prev)">
-                        <a href="{:leuu('article/index',array('id'=>$prev['tid'],'cid'=>$prev['term_id']))}" class="btn btn-primary pull-left">上一篇</a>
-                    </if>
-                    <if condition="!empty($next)">
-                        <a href="{:leuu('article/index',array('id'=>$next['tid'],'cid'=>$next['term_id']))}" class="btn btn-info pull-right">下一篇</a>
-                    </if>
                     <script type="text/javascript" src="__TMPL__Public/js/qrcode.min.js"></script>
                     <div id="qrcode" style="width: 100px;margin:0 auto"></div>
                     <script type="text/javascript">
@@ -78,7 +89,14 @@
                     <h2>分享</h2>
                 </div>
                 <div class="bdsharebuttonbox">
-                    <a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a>
+                    <a href="#" class="bds_more" data-cmd="more"></a><a href="#" class="bds_weixin" data-cmd="weixin"
+                                                                        title="分享到微信"></a><a href="#" class="bds_tsina"
+                                                                                             data-cmd="tsina"
+                                                                                             title="分享到新浪微博"></a><a
+                        href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tqq"
+                                                                                           data-cmd="tqq"
+                                                                                           title="分享到腾讯微博"></a><a
+                        href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a>
                 </div>
                 <script>window._bd_share_config = {
                     "common": {
@@ -117,7 +135,8 @@
                         <foreach name="hot_articles" item="vo">
                             <php>$top=$key<3?"top3":"";</php>
                             <li class="{$top}">
-                                <i>{$key+1}</i><a title="{$vo.post_title}" href="{:leuu('article/index',array('id'=>$vo['tid'],'cid'=>$vo['term_id']))}">{$vo.post_title}</a>
+                                <i>{$key+1}</i><a title="{$vo.post_title}"
+                                                  href="{:leuu('article/index',array('id'=>$vo['tid'],'cid'=>$vo['term_id']))}">{$vo.post_title}</a>
                             </li>
                         </foreach>
                     </ul>
@@ -164,9 +183,9 @@
 
     </div>
 
-    <tc_include file="Public:footer" />
+    <tc_include file="Public:footer"/>
 </div>
 
-<tc_include file="Public:scripts" />
+<tc_include file="Public:scripts"/>
 </body>
 </html>
