--- a/themes/simplebootx/User/Profile/edit.html
+++ b/themes/simplebootx/User/Profile/edit.html
@@ -26,7 +26,7 @@
                                    			<div class="control-group">
                                    				<label class="control-label" for="input-user_name">姓名</label>
                                    				<div class="controls">
-                                   					<input type="text" id="input-user_name" placeholder="姓名" name="user_name" value="{$user_name}">
+                                   					<input type="text" id="input-user_name" placeholder="姓名"  value="{$user_name}" readonly>
                                    				</div>
                                    			</div>
                                    			<div class="control-group">
