修复点赞功能

--- a/themes/simplebootx/Portal/list_content.html
+++ b/themes/simplebootx/Portal/list_content.html
@@ -44,7 +44,7 @@
                                         <i class="fa fa-star-o"></i>
                                     </a>
                                     <a href="javascript:;"><i class="fa fa-eye"></i><span>{$vo.post_hits}</span></a>
-                                    <a href="{:U('article/do_like',array('id'=>$vo['object_id']))}"
+                                    <a href="{:U('article/do_like',array('id'=>$vo['id']))}"
                                        class="js-count-btn"><i class="fa fa-thumbs-up"></i><span class="count">{$vo.post_like}</span></a>
 
                                 </div>
