显示点赞用户的用户名

--- a/themes/simplebootx/Portal/content_project.html
+++ b/themes/simplebootx/Portal/content_project.html
@@ -48,6 +48,7 @@
                         <a href="javascript:;"><i class="fa fa-eye"></i><span>{$article['post_hits']}</span></a>
                         <a href="{:U('article/do_like',array('id'=>$object_id))}" class="js-count-btn"><i
                                 class="fa fa-thumbs-up"></i><span class="count">{$article['post_like']}</span></a>
+                        <span>{$str_like_list}点了赞</span>
 
                     </span>
                 </div>
